# banking-project

./: .dockerignore  docker-compose.yml  dockerfile  pyproject.toml  traefik.yml
src/backend/app/: main.py
src/backend/app/api/: main.py
src/backend/app/api/routes/: home.py
src/backend/app/core/: config.py  db.py  logging.py
