[tool.poetry]
name = "banking-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"
sqlmodel = "^0.0.31"
alembic = "^1.18.1"
asyncpg = "^0.31.0"
argon2-cffi = "^25.1.0"
psycopg = {extras = ["binary", "pool"], version = "^3.3.2"}
pydantic-settings = "^2.12.0"
greenlet = "^3.3.1"
uvicorn = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

